# pharos

./: .env.example  .gitignore  LICENSE  Makefile  README.md
config/: pharos.example.toml
core/: dune-project  pharos.opam
core/lib/: adapter.ml  capability.ml  domain.ml  dune  gitlab_identity.ml  gitlab_identity.mli  gitlab_read.ml  gitlab_write.ml  gitlab_write.mli  ids.ml  json_util.ml  metrics.ml  migrations.ml  policy.ml  rules.ml  runner.ml  runner.mli  skill.ml  source_settings.ml  store.ml  time.ml  triage.ml
core/test/: daemon_auth_test.ml  dune  gitlab_identity_test.ml  gitlab_read_parser_test.ml  gitlab_writeback_test.ml  merge_identity_test.ml  payload_hash_test.ml  policy_smoke.ml  skill_output_test.ml  source_settings_test.ml  today_decision.ml
docs/: ADAPTER_PROTOCOL.md  API.md  ARCHITECTURE.md  CODEX_NOTES.md  CODEX_PLAN.md  DECISIONS.md  DOGFOOD.md  ITERATION_PLAN.md  PRD_v0.2.md  PRD_v0.3.md  PROJECT_BLUEPRINT.md  RISKS.md  SECURITY.md  TECHNICAL_PRD.md  USER_EXPERIENCE.md
docs/v0.3-plan/: EXECUTION_ORDER.md  PROJECT_CONTEXT.md
docs/v0.3-plan/checklists/: regression.md  release_gate.md
docs/v0.3-plan/codex/: 00_MASTER_RULES.md  01_CREATE_PRD_V03_AND_DOCS_ALIGNMENT.md  02_DECISION_CARD_API_AND_CORE_MAPPING.md  03_SWIFT_TODAY_DECISION_COCKPIT.md  (+8 more)
examples/: feishu_chat_signal.json  feishu_docs_signal.json  feishu_project_signal.json  gitlab_mr_api_response.json  gitlab_mr_discussions_response.json  gitlab_mr_signal.json  manual_capture.json
protocol/: openapi.yaml
scripts/: check-policy.sh  package-local.sh  run-core.sh  seed-demo.sh
(+39 files in other folders)
