opam-version: "2.0"
synopsis: "Local-first AI work cockpit core"
description: "OCaml core daemon and CLI for Pharos."
maintainer: "DBvc"
authors: ["DBvc"]
license: "UNLICENSED"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.11"}
  "dream"
  "yojson"
  "sqlite3"
  "uuidm"
  "lwt"
]
