(test
 (name policy_smoke)
 (libraries pharos_core yojson))

(test
 (name today_decision)
 (libraries pharos_core yojson))

(test
 (name merge_identity_test)
 (libraries pharos_core yojson))

(test
 (name source_settings_test)
 (libraries pharos_core yojson))

(test
 (name gitlab_read_parser_test)
 (libraries pharos_core yojson))

(test
 (name skill_output_test)
 (libraries pharos_core yojson))
