(test
 (name policy_smoke)
 (libraries pharos_core yojson))

(test
 (name payload_hash_test)
 (libraries pharos_core))

(test
 (name today_decision)
 (libraries pharos_core yojson))

(test
 (name merge_identity_test)
 (libraries pharos_core yojson))

(test
 (name source_settings_test)
 (libraries pharos_core yojson))

(test
 (name gitlab_read_parser_test)
 (libraries pharos_core yojson))

(test
 (name gitlab_writeback_test)
 (libraries pharos_core yojson))

(test
 (name skill_output_test)
 (libraries pharos_core yojson))

(test
 (name daemon_auth_test)
 (libraries pharos_core pharos_daemon_app dream lwt.unix unix)
 (deps ../bin/daemon/main.exe))
